tests/snapshots/ui_tests__rose_pine_moon_theme.snap
---
source: tests/ui_tests.rs
expression: output
---
╭ Navigation ───╭ Local Source /test/╮ Remote Destination (╮ Job #1 Details ───────────────────────────────────────────╮
│▌ Transfers    │ Size      Modified │Name                 │SUMMARY                                                    │
│  Quarantine   │ -         -        │                     │Result     : uploading                                     │
│  Logs         │ -         -        │                     │Operation  : Transfer                                      │
│  Settings     │ 1.0 KB    -        │                     │Size       : 4.77 MB                                       │
│               │ 2.0 MB    -        │                     │Avg Rate   : -                                             │
│               │                    │                     │Session    : test-session                                  │
│               │                    │                     │Started    : 2026-01-15T10:30:00+00:00                     │
│               │                    │                     │Finished   : -                                             │
│               │                    │                     │                                                           │
│               │                    │                     │TRANSFER                                                   │
│               │                    │                     │Source     : /uploads/summary.pdf                          │
│               │                    │                     │Dest       : /uploads/summary.pdf                          │
│               │                    │                     │Source Ep  : -                                             │
│               │                    │                     │Dest Ep    : -                                             │
│               │                    │                     │Upload     : none                                          │
│               │                    │                     │Scan       : clean                                         │
│               │                    │                     │                                                           │
│               ╰────────────────────╯─────────────────────╯POLICY                                                     │
│               │ Queue (Jobs)                             │Conflict   : -                                             │
│               │File             Op Ro Fr To S Si Pr Av ET│Scan Mode  : -                                             │
│               │📄  summary.pdf   Tr -  -  -  u 4. ░░ -  - │Scan Time  : 500ms                                         │
│               │📄  notes.txt     Tr -  -  -  c 11 ██ -  - │Retry      : attempt 1                                     │
│               │                                          │                                                           │
│               │                                          │INTEGRITY                                                  │
│               │                                          │Verdict    : Not Available                                 │
│               │                                          │Remote     : Not uploaded                                  │
│               │                                          │Local      : Calculating...                                │
│               │                                          │                                                           │
│               │                                          │ERROR                                                      │
│               │                                          │Message    : none                                          │
│               │                                          │                                                           │
│               │                                          │RECENT EVENTS                                              │
│               │                                          │Events     : none                                          │
│               │                                          │───────────────────────────────────────────────────────────╯
│               │                                          │ Metrics                                                   │
│               │                                          │Disk Read:  0 B               Net Down: 0 B                │
│               │                                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
↑/↓ Select  │  p Pause/Resume  │  +/- Pr             ClamAV: Connected  │  S3: Not Configured  │  Jobs: 2  │  Threats: 0
