tests/snapshots/ui_tests__settings_view.snap
---
source: tests/ui_tests.rs
assertion_line: 508
expression: output
---
╭ Navigation ───╭ Configuration ───────────────────────────╮ History [All] ────────────────────────────────────────────╮
│  Transfers    │ S3 Storage    │╭Profile─────────────────╮│File                     Result   Route    Size    Duration│
│  Quarantine   │ Scanner       ││▼ Unconfigured          ││                                                           │
│  Logs         │ Performance   │╰────────────────────────╯│                                                           │
│▌ Settings     │ General       │╭Profile Name────────────╮│                                                           │
│               │               ││Unconfigured            ││                                                           │
│               │               │╰────────────────────────╯│                                                           │
│               │               │╭S3 Endpoint─────────────╮│                                                           │
│               │               ││                        ││                                                           │
│               │               │╰────────────────────────╯│                                                           │
│               │               │╭S3 Bucket───────────────╮│                                                           │
│               │               ││                        ││                                                           │
│               │               │╰────────────────────────╯│                                                           │
│               │               │╭S3 Region───────────────╮│                                                           │
│               │               ││▼ ap-southeast-2        ││                                                           │
│               │               │╰────────────────────────╯│                                                           │
│               │               │╭S3 Prefix───────────────╮│                                                           │
│               │               ││                        ││                                                           │
│               │               │╰────────────────────────╯│                                                           │
│               │               │╭S3 Access Key───────────╮│                                                           │
│               │               ││                        ││                                                           │
│               │               │╰────────────────────────╯│                                                           │
│               │               │╭S3 Secret Key───────────╮│                                                           │
│               │               ││*******                 ││                                                           │
│               │               │╰────────────────────────╯│                                                           │
│               │               │                          │                                                           │
│               │               │                          │                                                           │
│               │               │                          │                                                           │
│               │               │                          │                                                           │
│               │               │                          │                                                           │
│               │               │                          │                                                           │
│               │               │                          │                                                           │
│               │               │                          │                                                           │
│               │               │                          │                                                           │
│               │               │                          │───────────────────────────────────────────────────────────╯
│               │               │                          │ Metrics                                                   │
│               │               │                          │Disk Read:  0 B               Net Down: 0 B                │
│               │               │                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
Tab/→ Fields  │  ← Rail  │  ↑/↓ Category             ClamAV: Connected  │  S3: Not Configured  │  Jobs: 0  │  Threats: 0
