tests/snapshots/ui_tests__transfers_view_empty.snap
---
source: tests/ui_tests.rs
expression: output
---
╭ Navigation ───╭ Local (Press 'a' to╮ Remote (S3): 0 [Path╮ History [All] ────────────────────────────────────────────╮
│▌ Transfers    │ Size      Modified │Name                 │File                 Status           Size       Time      │
│  Quarantine   │ -         -        │                     │                                                           │
│  Logs         │ -         -        │                     │                                                           │
│  Settings     │ 1.0 KB    -        │                     │                                                           │
│               │ 2.0 MB    -        │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               ╰────────────────────╯─────────────────────╯                                                           │
│               │ Queue (Jobs)                             │                                                           │
│               │File                 Statu Size Progr Time│                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │───────────────────────────────────────────────────────────╯
│               │                                          │ Metrics                                                   │
│               │                                          │Disk Read:  0 B               Net Down: 0 B                │
│               │                                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
↑/↓ Select  │  a Browse  │  Tab Navigate             ClamAV: Connected  │  S3: Not Configured  │  Jobs: 0  │  Threats: 0
