tests/snapshots/ui_tests__wizard_view.snap
---
source: tests/ui_tests.rs
assertion_line: 592
expression: output
---
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                ╭ Setup Wizard ────────────────────────────────────────────────────────────────────────╮                
                │Initial Setup  ·  Step 1/4                                                            │                
                │[███████░░░░░░░░░░░░░░░░░░░░░] Storage Paths                                          │                
                │Choose where quarantine, reports, and state data are stored.                          │                
                │                                                                                      │                
                │╭────────────────────────────────────────────────────────────────────────────────────╮│                
                ││ Steps               │ Choose where quarantine, reports, and state data are stored. ││                
                ││ 1  Paths            │                                                              ││                
                ││ 2  Scanner          │ ╭Quarantine Directory *─────────────────────────────────────╮││                
                ││ 3  S3               │ │./quarantine                                               │││                
                ││ 4  Performance      │ ╰───────────────────────────────────────────────────────────╯││                
                ││ 5  Finish           │ ╭Reports Directory *────────────────────────────────────────╮││                
                ││                     │ │./reports                                                  │││                
                ││                     │ ╰───────────────────────────────────────────────────────────╯││                
                ││                     │ ╭State Directory *──────────────────────────────────────────╮││                
                ││                     │ │./state                                                    │││                
                ││                     │ ╰───────────────────────────────────────────────────────────╯││                
                ││                     │                                                              ││                
                ││                     │                                                              ││                
                ││                     │                                                              ││                
                ││                     │                                                              ││                
                ││                     │                                                              ││                
                ││                     │                                                              ││                
                ││                     │                                                              ││                
                ││                     │                                                              ││                
                ││                     │ Infected files are moved here after a positive scan.         ││                
                ││                     │                                                              ││                
                │╰────────────────────────────────────────────────────────────────────────────────────╯│                
                │↑/↓ Field  │  Enter Edit/Toggle  │  Space Toggle  │  s Skip  │  Tab/Shift+Tab Step  │ │                
                │                                                                                      │                
                │                                                                                      │                
                ╰──────────────────────────────────────────────────────────────────────────────────────╯
